--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,10 +7,10 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
    <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class="logo">&#9728;</li>  <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
 
